@@ -39,20 +39,17 @@ class external_runner(base_runner):
 
 		import subprocess
 		import tempfile
-
 		try:
 			# Temporary file for the standard output and experiment
 			self.stdout = tempfile.mktemp(suffix=u".stdout")
-
 			if self.experiment.experiment_path is None:
-				raise osexception( \
-					u"Please save your experiment first, before running it using opensesamerun")
+				raise osexception(u"Please save your experiment first, before "
+					u"running it using opensesamerun")
 
-			self.path = os.path.join(self.experiment.experiment_path, \
-				'.opensesamerun-tmp.opensesame.tar.gz')
+			self.path = os.path.join(self.experiment.experiment_path,
+				'.opensesamerun-tmp.osexp')
 			self.experiment.save(self.path, True)
 			debug.msg(u"experiment saved as '%s'" % self.path)
-
 			# Determine the name of the executable
 			if config.get_config(u'opensesamerun_exec') == u'':
 				if os.name == u"nt":
@@ -61,22 +58,20 @@ class external_runner(base_runner):
 					self.cmd = [u"opensesamerun"]
 			else:
 				self.cmd = config.get_config(u'opensesamerun_exec').split()
-
-			self.cmd += [self.path, u"--logfile=%s" % self.experiment.logfile, \
-				u"--subject=%s" % self.experiment.subject_nr]
-
+			self.cmd += [
+				self.path,
+				u"--logfile=%s" % self.experiment.logfile,
+				u"--subject=%s" % self.experiment.var.subject_nr
+				]
 			if debug.enabled:
 				self.cmd.append(u"--debug")
-			if self.experiment.fullscreen:
+			if self.experiment.var.fullscreen == u'yes':
 				self.cmd.append(u"--fullscreen")
 			if u"--pylink" in sys.argv:
 				self.cmd.append(u"--pylink")
 
-
 			debug.msg(u"spawning opensesamerun as a separate process")
-
 			# Call opensesamerun and wait for the process to complete
-
 			try:
 				p = subprocess.Popen(self.cmd, stdout = open(self.stdout, u"w"))
 			except Exception as e:
@@ -86,7 +81,6 @@ class external_runner(base_runner):
 				except:
 					pass
 				return e
-
 			# Wait for OpenSesame run to complete, process events in the meantime,
 			# to make sure that the new process is shown (otherwise it will crash
 			# on Windows).
@@ -95,21 +89,16 @@ class external_runner(base_runner):
 				retcode = p.poll()
 				QtGui.QApplication.processEvents()
 				time.sleep(1)
-
 			debug.msg(u"opensesamerun returned %d" % retcode)
-
 			print
 			print(open(self.stdout, u"r").read())
 			print
-
 			# Clean up the temporary file
 			try:
 				os.remove(self.path)
 				os.remove(self.stdout)
 			except:
 				pass
-
 			return None
 		except Exception as e:
 			return e
-
